src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .hover {
    @apply transition-colors duration-300 hover:border-none hover:bg-transparent hover:text-blue-950 hover:ring hover:ring-blue-500 hover:ring-offset-1 focus:bg-transparent focus:text-blue-950 focus:ring-blue-500;
  }
  .loader {
    width: 45px;
    aspect-ratio: 0.75;
    --c: no-repeat linear-gradient(theme(colors.blue.500));
    background:
      var(--c) 0% 50%,
      var(--c) 50% 50%,
      var(--c) 100% 50%;
    background-size: 20% 50%;
    animation: loading 1s infinite linear;
  }

  @keyframes loading {
    20% {
      background-position:
        0% 0%,
        50% 50%,
        100% 50%;
    }
    40% {
      background-position:
        0% 100%,
        50% 0%,
        100% 50%;
    }
    60% {
      background-position:
        0% 50%,
        50% 100%,
        100% 0%;
    }
    80% {
      background-position:
        0% 50%,
        50% 50%,
        100% 100%;
    }
  }

  .width {
    max-width: 80rem;
    margin: 0 auto;
  }
}

@layer base {
  body {
    max-width: 80rem;
    margin: 0 auto;
  }
}

